<resources>
    <string name="app_name">M6</string>
    <string name="button_config">Configuration</string>
    <string name="edit_name">Enter your name</string>
    <string name="engineer">Engineer</string>
    <string name="pilot">Pilot</string>
    <string name="fighter">Fighter</string>
    <string name="trader">Trader</string>
    <string name="skill_points">Skill Points</string>
    <string name="charactor_name_input">Name</string>
    <string name="title_activity_menu___temp">Menu_Activity_Temp</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_current_planet">CurrentPlanetActivity</string>
    <string name="title_activity_buy_goods">BuyGoods</string>
    <string name="title_activity_sell_goods">SellGoods</string>
    <string name="title_activity_menu">MenuActivity</string>

</resources>
